# agents-demo

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
agents/: build_and_push.sh
agents/data-handler/: Dockerfile
agents/translator-agent/: Dockerfile
agents/translator-agent/skills/: translator.md
data-handler/: Dockerfile
data-handler/skills/: csvkit.md
input/: customers.csv  instructions.txt  inventory.csv  menu.txt  sales.csv
sample-input/text/: greeting.txt
src/: create_run.py  create_run_with_export.py  create_run_with_import.py  fork_run.py  register_agent.py  track_run.py
translator-agent/: Dockerfile
trelent-cli/: README.md  pyproject.toml
trelent-cli/trelent_cli/: cli.py  client.py
trelent-cli/trelent_cli/commands/: auth.py  runs.py  sandboxes.py
trelent_cli/: __init__.py  cli.py  client.py
trelent_cli/commands/: __init__.py  auth.py  runs.py  sandboxes.py
