[project]
name = "trelent-cli"
version = "0.1.10"
description = "CLI wrapper for trelent-agents SDK"
readme = "README.md"
authors = [
    { name = "Calum Bird", email = "calum@trelent.net" }
]
requires-python = ">=3.11"
dependencies = [
    "trelent-agents>=0.2.1",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
trelent = "trelent_cli.cli:main"

[tool.uv]
package = true
